--- a/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj
+++ b/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj
@@ -367,11 +367,14 @@
     <ClInclude Include="include\GL\glew.h" />
     <ClInclude Include="include\GL\glxew.h" />
     <ClInclude Include="include\GL\wglew.h" />
+    <ClInclude Include="IRenderer.h" />
+    <ClInclude Include="IUpdater.h" />
     <ClInclude Include="NonRenderableObject.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="RenderableObject" />
     <ClInclude Include="RenderableObject.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="SampleNonRender.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="UserObject.h" />
   </ItemGroup>
@@ -522,6 +525,7 @@
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="RenderableObject.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="SampleNonRender.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="UserObject.cpp" />
   </ItemGroup>
