Singleton 추가 및 Key Input
- InputManager 추가 : Key 입력
- FileManager, Renderer, InputManager를 Singleton으로 수정

--- a/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj
+++ b/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="glm\common.hpp" />
     <ClInclude Include="glm\detail\compute_common.hpp" />
@@ -367,6 +368,7 @@
     <ClInclude Include="include\GL\glew.h" />
     <ClInclude Include="include\GL\glxew.h" />
     <ClInclude Include="include\GL\wglew.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="IRenderer.h" />
     <ClInclude Include="IUpdater.h" />
     <ClInclude Include="NonRenderableObject.h" />
@@ -375,6 +377,7 @@
     <ClInclude Include="RenderableObject.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="SampleNonRender.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="UserObject.h" />
   </ItemGroup>
@@ -519,7 +522,9 @@
     <None Include="vs_w7.shader" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NonRenderableObject.cpp" />
     <ClCompile Include="Object.cpp" />
