--- a/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -810,6 +810,9 @@
     <ClInclude Include="Singleton.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Apple.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="glm\detail\func_common.inl">
@@ -1251,6 +1254,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="InputManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Apple.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
