--- a/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -813,6 +813,12 @@
     <ClInclude Include="Apple.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Template.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectUpdater.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="glm\detail\func_common.inl">
@@ -1257,6 +1263,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Apple.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Template.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectUpdater.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
